添加测试用例层； 1、新增测试用例基类，实现自定义构造器，用于参数化； 2、新增用例组织结构；

--- a/core/ui_test_script/report.html
+++ b/core/ui_test_script/report.html
@@ -208,8 +208,8 @@
           <h1></h1>
           <div class="center">
             <div class="btn lang">Switch to English version</div>
-            <div class="time zh">开始时间：2019-11-15 13:55:41，耗时 <b>44.987</b> 秒</div>
-            <div class="time en">Started at：2019-11-15 13:55:41，cost <b>44.987</b> s</div>
+            <div class="time zh">开始时间：2019-11-19 16:47:36，耗时 <b>52.117</b> 秒</div>
+            <div class="time en">Started at：2019-11-19 16:47:36，cost <b>52.117</b> s</div>
           </div>
           <div class="head">
             <header class="zh"><span class="rate"></span>成功率：</span> 1/1</header>
@@ -239,11 +239,11 @@
               <div class="table-col long en">device</div>
               <div class="table-col ">--</div>
             </div>
-                          <div class="table-row" path="D:\workspace\autoui_demo\core\log\5EF0218112013132\2019_11_15_13_55_42\log.html">
+                          <div class="table-row" path="D:\workspace\autoui_demo\core\log\SJE0217C15015569\2019_11_19_16_47_37\log.html">
                 <div class="table-col short">1</div>
                 <div class="table-col short zh success">成功</div>
                 <div class="table-col short en success">sucess</div>
-                <div class="table-col long">5EF0218112013132</div>
+                <div class="table-col long">SJE0217C15015569</div>
                 <div class="table-col detail zh">点击可查看详情</div>
                 <div class="table-col detail en">click to see detail</div>
               </div>
